leetcode/701_insert_into_a_binary_search_tree/rust/src/tests/snapshots/insert_into_a_binary_search_tree__tests__test_empty_tree.snap
---
source: src/tests/mod.rs
expression: actual

---
Some(
    RefCell {
        value: TreeNode {
            val: 1,
            left: None,
            right: None,
        },
    },
)
