leetcode/701_insert_into_a_binary_search_tree/rust/src/tests/snapshots/insert_into_a_binary_search_tree__tests__test_three_height_tree.snap
---
source: src/tests/mod.rs
expression: actual

---
Some(
    RefCell {
        value: TreeNode {
            val: 40,
            left: Some(
                RefCell {
                    value: TreeNode {
                        val: 20,
                        left: Some(
                            RefCell {
                                value: TreeNode {
                                    val: 10,
                                    left: None,
                                    right: None,
                                },
                            },
                        ),
                        right: Some(
                            RefCell {
                                value: TreeNode {
                                    val: 30,
                                    left: Some(
                                        RefCell {
                                            value: TreeNode {
                                                val: 25,
                                                left: None,
                                                right: None,
                                            },
                                        },
                                    ),
                                    right: None,
                                },
                            },
                        ),
                    },
                },
            ),
            right: Some(
                RefCell {
                    value: TreeNode {
                        val: 60,
                        left: Some(
                            RefCell {
                                value: TreeNode {
                                    val: 50,
                                    left: None,
                                    right: None,
                                },
                            },
                        ),
                        right: Some(
                            RefCell {
                                value: TreeNode {
                                    val: 70,
                                    left: None,
                                    right: None,
                                },
                            },
                        ),
                    },
                },
            ),
        },
    },
)
